# BMSTU-Stack

./: .travis.yml  CMakeLists.txt  README.md
include/: allocator.hpp  stack.hpp
tests/: catch.hpp  count.cpp  empty.cpp  pop.cpp  push.cpp  top.cpp
